@@ -1,3 +1,5 @@
+- Bug fix: Correctly export RAIDES data into XLSX format [#ISCTE-FENIXEDU-339]
+
 2.16.1 (25-01-2024)
 - Improvement: Update logs and data export format to XLSX [#qubIT-Fenix-4879]
 - Improvement: Improve error message when skipping students with 0 classification on conclusion [#qubIT-Fenix-4867]
